--- a/ActRec/ActRec.iOS/Info.plist
+++ b/ActRec/ActRec.iOS/Info.plist
@@ -29,7 +29,7 @@
     <key>CFBundleVersion</key>
     <string>1.2.11</string>
     <key>UILaunchStoryboardName</key>
-    <string>LaunchScreen</string>
+    <string>UILaunchScreen</string>
     <key>CFBundleName</key>
     <string>ActRec</string>
     <key>XSAppIconAssets</key>
