newer maui in case it helps

--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -5,6 +5,7 @@
     <UseMaui>true</UseMaui>
     <RootNamespace>ActRec</RootNamespace>
     <Nullable>enable</Nullable>
+    <UseMauiEssentials>false</UseMauiEssentials>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.51" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.0" />
   </ItemGroup>
 
@@ -26,4 +31,5 @@
     <ProjectReference Include="..\..\deps\AdaptiveInterpolator\AdaptiveInterpolator.csproj" />
     <ProjectReference Include="..\..\deps\VisiPlacer\VisiPlacer\VisiPlacer.csproj" />
   </ItemGroup>
+
 </Project>
